--- a/math-logic-hw1.cabal
+++ b/math-logic-hw1.cabal
@@ -9,9 +9,9 @@ version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/smntin/math-logic-hw1#readme>
 homepage:       https://github.com/smntin/math-logic-hw1#readme
 bug-reports:    https://github.com/smntin/math-logic-hw1/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+author:         SmnTin
+maintainer:     smn.pankv@gmail.com
+copyright:      2022 SmnTin
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -24,25 +24,13 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Forms
   other-modules:
       Paths_math_logic_hw1
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
-  default-language: Haskell2010
-
-executable math-logic-hw1-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_math_logic_hw1
-  hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , math-logic-hw1
   default-language: Haskell2010
 
 test-suite math-logic-hw1-test
