--- a/package.yaml
+++ b/package.yaml
@@ -2,9 +2,9 @@ name:                math-logic-hw1
 version:             0.1.0.0
 github:              "smntin/math-logic-hw1"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+author:              "SmnTin"
+maintainer:          "smn.pankv@gmail.com"
+copyright:           "2022 SmnTin"
 
 extra-source-files:
 - README.md
@@ -23,17 +23,6 @@ dependencies:
 
 library:
   source-dirs: src
-
-executables:
-  math-logic-hw1-exe:
-    main:                Main.hs
-    source-dirs:         app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - math-logic-hw1
 
 tests:
   math-logic-hw1-test:
