--- a/math-logic-hw1.cabal
+++ b/math-logic-hw1.cabal
@@ -44,4 +44,7 @@ test-suite math-logic-hw1-test
   build-depends:
       base >=4.7 && <5
     , math-logic-hw1
+    , tasty >=1.4
+    , tasty-hunit >=0.10
+    , tasty-quickcheck >=0.10
   default-language: Haskell2010
