--- a/math-logic-hw1.cabal
+++ b/math-logic-hw1.cabal
@@ -47,4 +47,5 @@ test-suite math-logic-hw1-test
     , tasty >=1.4
     , tasty-hunit >=0.10
     , tasty-quickcheck >=0.10
+    , tasty-smallcheck >=0.8
   default-language: Haskell2010
